feat(client)!: add home route

--- a/backend/views/admin/index.ejs
+++ b/backend/views/admin/index.ejs
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<%- include('./layouts/start-dashboard-layout.ejs') %>
+<%- include('./partials/dashboard/layout-start.ejs') %>
 
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
@@ -10,13 +7,7 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1 class="m-0">Dashboard</h1>
-        </div><!-- /.col -->
-        <div class="col-sm-6">
-          <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active">Dashboard v1</li>
-          </ol>
+          <h1 class="m-0"><%= pageTitle %></h1>
         </div><!-- /.col -->
       </div><!-- /.row -->
     </div><!-- /.container-fluid -->
@@ -611,4 +602,29 @@
 </div>
 <!-- /.content-wrapper -->
 
-<%- include('./layouts/end-dashboard-layout.ejs') %>
+<%- include('./partials/dashboard/layout-end.ejs') %>
+
+<!-- jQuery UI 1.11.4 -->
+<script src="/admin-lte/plugins/jquery-ui/jquery-ui.min.js"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script nonce="<%= cspNonce %>">
+  $.widget.bridge('uibutton', $.ui.button)
+</script>
+<!-- ChartJS -->
+<script src="/admin-lte/plugins/chart.js/Chart.min.js"></script>
+<!-- Sparkline -->
+<script src="/admin-lte/plugins/sparklines/sparkline.js"></script>
+<!-- JQVMap -->
+<script src="/admin-lte/plugins/jqvmap/jquery.vmap.min.js"></script>
+<script src="/admin-lte/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+<!-- jQuery Knob Chart -->
+<script src="/admin-lte/plugins/jquery-knob/jquery.knob.min.js"></script>
+<!-- daterangepicker -->
+<script src="/admin-lte/plugins/moment/moment.min.js"></script>
+<script src="/admin-lte/plugins/daterangepicker/daterangepicker.js"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="/admin-lte/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- Summernote -->
+<script src="/admin-lte/plugins/summernote/summernote-bs4.min.js"></script>
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<script src="/admin-lte/dist/js/pages/dashboard.js"></script>
