--- a/backend/views/admin/partials/dashboard/sidebar.ejs
+++ b/backend/views/admin/partials/dashboard/sidebar.ejs
@@ -12,20 +12,20 @@
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/" class="nav-link">
             <i class="nav-icon fas fa-home"></i>
             <p>
-              Beranda
+              Home
             </p>
           </a>
         </li>
 
         <li class="nav-header">Master</li>
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/categories" class="nav-link">
             <i class="nav-icon far fa-calendar-alt"></i>
             <p>
-              Kategori
+              Categories
             </p>
           </a>
         </li>
