--- a/backend/views/admin/partials/dashboard/head.ejs
+++ b/backend/views/admin/partials/dashboard/head.ejs
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Admin &ndash; StoreGG</title>
+  <title><%= pageTitle %> &ndash; StoreGG</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
@@ -24,4 +24,8 @@
   <link rel="stylesheet" href="/admin-lte/plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
   <link rel="stylesheet" href="/admin-lte/plugins/summernote/summernote-bs4.min.css">
+  <!-- DataTables -->
+  <link rel="stylesheet" href="/admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="/admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+  <link rel="stylesheet" href="/admin-lte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 </head>
