--- a/backend/views/admin/categories/index.ejs
+++ b/backend/views/admin/categories/index.ejs
@@ -11,7 +11,7 @@
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item"><a href="/admin">Home</a></li>
             <li class="breadcrumb-item active"><%= pageTitle %></li>
           </ol>
         </div>
