--- a/backend/views/admin/partials/dashboard/sidebar.ejs
+++ b/backend/views/admin/partials/dashboard/sidebar.ejs
@@ -1,7 +1,7 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
+  <a href="/admin" class="brand-link">
     <img src="/favicon.ico" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
     <span class="brand-text font-weight-light">Admin StoreGG</span>
   </a>
@@ -12,7 +12,7 @@
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <li class="nav-item">
-          <a href="/" class="nav-link">
+          <a href="/admin" class="nav-link">
             <i class="nav-icon fas fa-home"></i>
             <p>
               Home
@@ -22,7 +22,7 @@
 
         <li class="nav-header">Master</li>
         <li class="nav-item">
-          <a href="/categories" class="nav-link">
+          <a href="/admin/categories" class="nav-link">
             <i class="nav-icon far fa-calendar-alt"></i>
             <p>
               Categories
