--- a/backend/views/admin/categories/create.ejs
+++ b/backend/views/admin/categories/create.ejs
@@ -36,7 +36,7 @@
                 <div class="form-group">
                   <label for="name">Category Name</label>
                   <input type="text" class="form-control" id="name" name="name"
-                    placeholder="Enter name for the category" value="<%= submitData?.name ?? "" %>">
+                    placeholder="Enter name for the category" value="<%= formData?.name ?? "" %>">
                 </div>
               </div>
               <!-- /.card-body -->
