--- a/backend/views/admin/partials/dashboard/layout-end.ejs
+++ b/backend/views/admin/partials/dashboard/layout-end.ejs
@@ -1,10 +1,9 @@
+</div>
+<!-- /.content-wrapper -->
+
 <%- include('./footer.ejs') %>
 
 </div>
 <!-- ./wrapper -->
 
-<%- include('./scripts.ejs') %>
-
 </body>
-
-</html>
