--- a/backend/views/admin/partials/dashboard/footer.ejs
+++ b/backend/views/admin/partials/dashboard/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="main-footer">
-  <strong>Copyright &copy; 2022 StoreGG.</strong>
+  <strong>Copyright &copy; 2022 <a href="javascript:void(0)">StoreGG</a>.</strong>
   All rights reserved.
   <div class="float-right d-none d-sm-inline-block">
     <b>Version</b> 0.1.0
