--- a/backend/views/admin/categories/index.ejs
+++ b/backend/views/admin/categories/index.ejs
@@ -11,12 +11,15 @@
 </head>
 
 <%- include('../partials/dashboard/layout-start.ejs', {
-  previousBreadcrumbs: [{ label: "Home", href: "/admin" }]
+  previousBreadcrumbs: [{ label: "Dashboard", href: "/admin" }]
 }) %>
 
 <!-- Main content -->
 <section class="content">
   <div class="container-fluid">
+
+    <%- include('../partials/alert.ejs') %>
+
     <div class="row">
       <div class="col-12">
         <div class="card">
