--- a/backend/views/admin/partials/common-scripts.ejs
+++ b/backend/views/admin/partials/common-scripts.ejs
@@ -7,4 +7,4 @@
 <!-- AdminLTE App -->
 <script src="/admin-lte/dist/js/adminlte.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="/admin-lte/dist/js/demo.js"></script>
+<!-- <script src="/admin-lte/dist/js/demo.js"></script> -->
