--- a/backend/views/admin/partials/dashboard/layout-end.ejs
+++ b/backend/views/admin/partials/dashboard/layout-end.ejs
@@ -1,7 +1,7 @@
 </div>
 <!-- /.content-wrapper -->
 
-<%- include('./footer.ejs') %>
+<%- include('../footer.ejs', { className: undefined }) %>
 
 </div>
 <!-- ./wrapper -->
