--- a/backend/views/admin/404.ejs
+++ b/backend/views/admin/404.ejs
@@ -19,6 +19,7 @@
         <div class="error-content">
           <h3><i class="fas fa-exclamation-triangle text-warning"></i> Oops! Page not found.</h3>
 
+          <!-- TODO: Remove "return to index"? -->
           <p>
             We could not find the page you were looking for.
             Meanwhile, you may <a href="/">return to index</a>.
