--- a/backend/views/admin/categories/create.ejs
+++ b/backend/views/admin/categories/create.ejs
@@ -15,9 +15,7 @@
 <!-- Main content -->
 <section class="content">
   <div class="container-fluid">
-
     <%- include('../partials/alert.ejs') %>
-
     <div class="row">
       <div class="col-12">
         <div class="card card-primary">
@@ -30,8 +28,15 @@
             <div class="card-body">
               <div class="form-group">
                 <label for="name">Category Name</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Enter name for the category"
-                  value="<%= formData?.name ?? "" %>">
+
+                <% const nameErrorMessage = formErrors?.name?.message; %>
+
+                <input type="text" class="form-control <%= _.isString(nameErrorMessage) ? "is-invalid" : "" %>"
+                  id="name" name="name" placeholder="Enter name for the category" value="<%= formData?.name ?? "" %>">
+
+                <% if (_.isString(nameErrorMessage)) { %>
+                <span class="invalid-feedback"><%= nameErrorMessage %></span>
+                <% } %>
               </div>
             </div>
             <!-- /.card-body -->
