--- a/backend/views/admin/categories/edit.ejs
+++ b/backend/views/admin/categories/edit.ejs
@@ -15,9 +15,7 @@
 <!-- Main content -->
 <section class="content">
   <div class="container-fluid">
-
     <%- include('../partials/alert.ejs') %>
-
     <div class="row">
       <div class="col-12">
         <div class="card card-primary">
@@ -27,16 +25,24 @@
           <!-- /.card-header -->
           <!-- form start -->
           <form action="/admin/categories/<%= formData.id %>?_method=PATCH" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <input type="hidden" name="id" value="<%= formData.id %>">
+
             <div class="card-body">
               <div class="form-group">
                 <label for="name">Category Name</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Enter name for the category"
-                  value="<%= formData.name %>">
+
+                <% const nameErrorMessage = formErrors?.name?.message; %>
+
+                <input type="text" class="form-control <%= _.isString(nameErrorMessage) ? "is-invalid" : "" %>"
+                  id="name" name="name" placeholder="Enter name for the category" value="<%= formData.name %>">
+
+                <% if (_.isString(nameErrorMessage)) { %>
+                <span class="invalid-feedback"><%= nameErrorMessage %></span>
+                <% } %>
               </div>
             </div>
             <!-- /.card-body -->
-
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
             <div class="card-footer">
               <button type="submit" class="btn btn-primary">Edit</button>
