--- a/backend/views/admin/partials/dashboard/sidebar.ejs
+++ b/backend/views/admin/partials/dashboard/sidebar.ejs
@@ -30,10 +30,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/admin/items" class="nav-link">
             <i class="nav-icon fas fa-tasks"></i>
             <p>
-              Nominal
+              Items
             </p>
           </a>
         </li>
