refactor(backend): create reusable input

--- a/backend/views/admin/categories/create.ejs
+++ b/backend/views/admin/categories/create.ejs
@@ -26,18 +26,7 @@
           <!-- form start -->
           <form action="/admin/categories" method="POST">
             <div class="card-body">
-              <div class="form-group">
-                <label for="name">Category Name</label>
-
-                <% const nameError = formErrors?.name; %>
-
-                <input type="text" class="form-control <%= _.isError(nameError) ? "is-invalid" : "" %>" id="name"
-                  name="name" placeholder="Enter name for the category" value="<%= formData?.name ?? "" %>" required>
-
-                <% if (_.isError(nameError)) { %>
-                <span class="invalid-feedback"><%= nameError.message %></span>
-                <% } %>
-              </div>
+              <%- include('./input.ejs') %>
             </div>
             <!-- /.card-body -->
 
