--- a/backend/views/admin/index.ejs
+++ b/backend/views/admin/index.ejs
@@ -451,8 +451,9 @@
           </div>
           <!-- /.card-body -->
           <div class="card-footer clearfix">
-            <button type="button" class="btn btn-primary float-right"><i class="fas fa-plus"></i> Add
-              item</button>
+            <button type="button" class="btn btn-primary float-right">
+              <i class="fas fa-plus"></i> Add item
+            </button>
           </div>
         </div>
         <!-- /.card -->
