--- a/backend/views/admin/nominals/create.ejs
+++ b/backend/views/admin/nominals/create.ejs
@@ -3,12 +3,15 @@
 
 <head>
   <%- include('../partials/common-head-content.ejs') %>
+  <!-- Select2 -->
+  <link rel="stylesheet" href="/admin-lte/plugins/select2/css/select2.min.css">
+  <link rel="stylesheet" href="/admin-lte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
 </head>
 
 <%- include('../partials/dashboard/layout-start.ejs', {
   previousBreadcrumbs: [
     { label: "Dashboard", href: "/admin" },
-    { label: "Items", href: "/admin/items" },
+    { label: "Nominals", href: "/admin/nominals" },
   ]
 }) %>
 
@@ -24,17 +27,16 @@
           </div>
           <!-- /.card-header -->
           <!-- form start -->
-          <form action="/admin/items/<%= formData.id %>?_method=PATCH" method="POST">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <input type="hidden" name="id" value="<%= formData.id %>">
-
+          <form action="/admin/nominals" method="POST">
             <div class="card-body">
               <%- include("./inputs.ejs") %>
             </div>
             <!-- /.card-body -->
 
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
             <div class="card-footer">
-              <button type="submit" class="btn btn-primary">Edit</button>
+              <button type="submit" class="btn btn-primary">Save</button>
             </div>
           </form>
         </div>
@@ -51,5 +53,16 @@
 <%- include('../partials/dashboard/layout-end.ejs') %>
 
 <%- include('../partials/common-scripts.ejs') %>
+<!-- Select2 -->
+<script src="/admin-lte/plugins/select2/js/select2.full.min.js"></script>
+<!-- Page specific script -->
+<script nonce="<%= cspNonce %>">
+  $(function () {
+    //Initialize Select2 Elements
+    $('.select2bs4').select2({
+      theme: 'bootstrap4'
+    })
+  });
+</script>
 
 </html>
