--- a/backend/views/admin/nominals/edit.ejs
+++ b/backend/views/admin/nominals/edit.ejs
@@ -3,15 +3,12 @@
 
 <head>
   <%- include('../partials/common-head-content.ejs') %>
-  <!-- Select2 -->
-  <link rel="stylesheet" href="/admin-lte/plugins/select2/css/select2.min.css">
-  <link rel="stylesheet" href="/admin-lte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
 </head>
 
 <%- include('../partials/dashboard/layout-start.ejs', {
   previousBreadcrumbs: [
     { label: "Dashboard", href: "/admin" },
-    { label: "Items", href: "/admin/items" },
+    { label: "Nominals", href: "/admin/nominals" },
   ]
 }) %>
 
@@ -27,16 +24,17 @@
           </div>
           <!-- /.card-header -->
           <!-- form start -->
-          <form action="/admin/items" method="POST">
+          <form action="/admin/nominals/<%= formData.id %>?_method=PATCH" method="POST">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <input type="hidden" name="id" value="<%= formData.id %>">
+
             <div class="card-body">
               <%- include("./inputs.ejs") %>
             </div>
             <!-- /.card-body -->
 
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-
             <div class="card-footer">
-              <button type="submit" class="btn btn-primary">Save</button>
+              <button type="submit" class="btn btn-primary">Edit</button>
             </div>
           </form>
         </div>
@@ -53,16 +51,5 @@
 <%- include('../partials/dashboard/layout-end.ejs') %>
 
 <%- include('../partials/common-scripts.ejs') %>
-<!-- Select2 -->
-<script src="/admin-lte/plugins/select2/js/select2.full.min.js"></script>
-<!-- Page specific script -->
-<script nonce="<%= cspNonce %>">
-  $(function () {
-    //Initialize Select2 Elements
-    $('.select2bs4').select2({
-      theme: 'bootstrap4'
-    })
-  });
-</script>
 
 </html>
