refactor(backend): rename `nominalNames` to uppercase `NOMINAL_NAMES`

--- a/backend/views/admin/nominals/inputs.ejs
+++ b/backend/views/admin/nominals/inputs.ejs
@@ -4,7 +4,7 @@
   <select class="form-control select2bs4 <%= _.isError(formErrors?.name) ? "is-invalid" : "" %>" style="width: 100%;"
     name="name" required>
     <option value="" <%= _.isUndefined(formData) ? "selected" : "" %>>--- Select Name ---</option>
-    <% for (const name of nominalNames) { %>
+    <% for (const name of NOMINAL_NAMES) { %>
     <option value="<%= name %>" <%= formData?.name === name ? "selected" : "" %>>
       <%= _.capitalize(name) %>
     </option>
