--- a/backend/views/admin/categories/create.ejs
+++ b/backend/views/admin/categories/create.ejs
@@ -22,7 +22,7 @@
       <div class="col-12">
         <div class="card card-primary">
           <div class="card-header">
-            <h3 class="card-title">Form</h3>
+            <h3 class="card-title">New Category</h3>
           </div>
           <!-- /.card-header -->
           <!-- form start -->
