--- a/backend/views/admin/categories/edit.ejs
+++ b/backend/views/admin/categories/edit.ejs
@@ -22,13 +22,12 @@
       <div class="col-12">
         <div class="card card-primary">
           <div class="card-header">
-            <h3 class="card-title">Form</h3>
+            <h3 class="card-title">Edit <%= category.name %></h3>
           </div>
           <!-- /.card-header -->
           <!-- form start -->
-          <form action="/admin/categories/<%= formData.id %>?_method=PATCH" method="POST">
+          <form action="/admin/categories/<%= category.id %>?_method=PATCH" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <input type="hidden" name="id" value="<%= formData.id %>">
 
             <div class="card-body">
               <%- include('./input.ejs') %>
