--- a/backend/views/admin/nominals/create.ejs
+++ b/backend/views/admin/nominals/create.ejs
@@ -25,7 +25,7 @@
       <div class="col-12">
         <div class="card card-primary">
           <div class="card-header">
-            <h3 class="card-title">Form</h3>
+            <h3 class="card-title">New Nominal</h3>
           </div>
           <!-- /.card-header -->
           <!-- form start -->
